tests/ui/type-qpath-eof1.stderr
error: no rules expected the token `<`
 --> $DIR/type-qpath-eof1.rs:5:16
  |
5 |     input = [{ < }]
  |                ^ no rules expected this token in macro call
